--- a/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
+++ b/module1-exploratory-data-analysis/LS_DS_111_Exploratory_Data_Analysis_Assignment.ipynb
@@ -56,15 +56,33 @@
       "metadata": {
         "id": "NJdISe69ZT7E",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b22f3c86-60f7-4fe8-839e-b0f2961125b5"
       },
       "source": [
         "# TODO your work here!\n",
         "# And note you should write comments, descriptions, and add new\n",
-        "# code and text blocks as needed"
+        "# code and text blocks as needed\n",
+        "2 + 2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
